Code polishing according to PMD and FindBugs.
git-svn-id: https://svn.code.sf.net/p/openuss/code/branches/openuss-plexus-3.1-shibboleth@4767 60046477-0c10-0410-bf4b-e552a4ff1768